Fix shift droparea

--- a/style/form-fields/droparea.css
+++ b/style/form-fields/droparea.css
@@ -1,5 +1,6 @@
 .dropzone {
-    border: 1px dashed var(--stroke-default);
+    border: 2px dashed transparent;
+    outline: 1px dashed var(--stroke-default);
     border-radius: 0.25rem;
 
     display: grid;
@@ -26,6 +27,7 @@
     }
 
     &:hover, &:has(input:focus) {
+        outline-width: 0;
         border: 2px dashed var(--stroke-highlight);
         background-color: var(--surface-secondary);
         
